# hugo-server

./: .gitignore  .justfile  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml  release-plz.toml
.cargo/: config.toml
.github/workflows/: check.yml  release-plz.yml
src/: algolia.rs  args.rs  cmd.rs  config.rs  env.rs  git.rs  lib.rs  log.rs  main.rs  router.rs
