[package]
name = "hugo-server"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["Terakomari <im.terakomari@icloud.com>"]
repository = "https://github.com/TerakomariGandesblood/hugo-server"
homepage = "https://github.com/TerakomariGandesblood/hugo-server"
description = "A hugo server"
readme = "README.md"
keywords = ["hugo", "server", "http"]
categories = ["command-line-utilities"]

[dependencies]
# https://github.com/dtolnay/anyhow
anyhow = { version = "1.0.102", default-features = false, features = ["std"] }
# https://github.com/tokio-rs/tracing
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
# https://github.com/tokio-rs/tracing
tracing-subscriber = { version = "0.3.22", default-features = false, features = [
  "std",
  "fmt",
  "ansi",
  "env-filter",
  # https://docs.rs/tracing-subscriber/latest/tracing_subscriber/fmt/time/struct.ChronoLocal.html
  "chrono",
  "tracing-log",
  "smallvec",
] }
# https://github.com/tokio-rs/tracing
tracing-appender = { version = "0.2.4", default-features = false }
# https://github.com/tokio-rs/tracing
tracing-log = { version = "0.2.0", default-features = false, features = [
  "std",
  "log-tracer",
] }
# https://github.com/tokio-rs/axum
axum = { version = "0.8.8", default-features = false, features = [
  "http1",
  "http2",
  "json",
  "tokio",
  "tower-log",
  "tracing",
] }
# https://github.com/tower-rs/tower
tower = { version = "0.5.3", default-features = false, features = [
  "limit",
  "load-shed",
  "timeout",
] }
# https://github.com/tower-rs/tower-http
tower-http = { version = "0.6.8", default-features = false, features = [
  "compression-full",
  "decompression-full",
  "trace",
  "fs",
] }
# https://github.com/tokio-rs/tokio
tokio = { version = "1.50.0", default-features = false, features = [
  "fs",
  "macros",
  "signal",
  "rt-multi-thread",
] }
# https://github.com/zkat/supports-color
supports-color = { version = "3.0.2", default-features = false }
# https://github.com/clap-rs/clap
clap = { version = "4.5.60", default-features = false, features = [
  "std",
  "color",
  "help",
  "usage",
  "error-context",
  "suggestions",
  "derive",
  "cargo",
  "wrap_help",
  "unicode",
  "string",
] }
# https://github.com/clap-rs/clap-verbosity-flag
clap-verbosity-flag = { version = "3.0.4", default-features = false }
# https://github.com/clap-rs/clap
clap_complete = { version = "4.5.66", default-features = false }
# https://github.com/clap-rs/clap
clap_complete_nushell = { version = "4.5.10", default-features = false }
# https://github.com/purpleprotocol/mimalloc_rust
mimalloc = { version = "0.1.48", default-features = false }
# https://github.com/serde-rs/serde
serde = { version = "1.0.228", default-features = false, features = [
  "std",
  "derive",
] }
# https://github.com/GitoxideLabs/gitoxide
gix = { version = "0.80.0", default-features = false, features = [
  "worktree-mutation",
  "max-performance",
  "blocking-http-transport-reqwest-rust-tls",
] }
# https://github.com/rust-shell-script/rust_cmd_lib
cmd_lib = { version = "2.0.0", default-features = false }
# https://github.com/harryfei/which-rs
which = { version = "8.0.0", default-features = false, features = ["real-sys"] }
# https://github.com/seanmonstar/reqwest
reqwest = { version = "0.13.2", default-features = false, features = [
  "http2",
  "rustls",
  "gzip",
  "deflate",
  "json",
  "system-proxy",
] }
# https://github.com/cloudwego/sonic-rs
sonic-rs = { version = "0.5.7", default-features = false }
# https://github.com/softprops/envy
envy = { version = "0.4.2", default-features = false }
# https://github.com/allan2/dotenvy
dotenvy = { version = "0.15.7", default-features = false }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = 'abort'
